--- a/RoboTwin/policy/HPT/HPT/experiments/configs/config.yaml
+++ b/RoboTwin/policy/HPT/HPT/experiments/configs/config.yaml
@@ -1,61 +1,60 @@
-seed: 42
-output_dir: ${hydra:runtime.output_dir}
-domains: mujoco_metaworld # domains to train on
-wb_tag: "default" # wandb tag
-log_interval: 10 # how many steps before logging to wandb
-script_name: "" # log the running script
-pretrained_dir: "" # pretrained model directory
-parallel_eval: False # use ray to do parallel evaluation
-slurm_job_id: "" # the slurm job id for logging purposes
-user_id: "" # the machine user id for logging purposes
+seed: 0  # random seed
+output_dir: ./output/hpt_train  # output directory
+domains: Robotwin  # domains to train on
+wb_tag: "hpt_exp"  # wandb tag
+log_interval: 10  # how many steps before logging to wandb
+script_name: "hpt_train"  # log the running script
+pretrained_dir: "./hpt-xlarge"  # pretrained model directory (can be local path)
+parallel_eval: False  # use ray to do parallel evaluation
 
-epoch_size: 10
-total_num_traj: 0
-train_time: 0
-cross_validate: False
-cross_validate_eps_num: 20
-cross_validate_freq: 100
-save_intermedia_models: False
-comment: ""
-
-defaults:
-  - _self_
-  - env: mujoco_metaworld
-
+# dataset parameters
+task_name: stack_blocks_two  # task name
+task_config: demo_clean  # task config
+episode_num: 100  # number of episodes to collect
+processed_data_dir: ./processed_data  # processed data save path
+total_num_traj: 100
 # dataset config
 dataset:
-  _target_: hpt.dataset.local_traj_dataset.LocalTrajDataset
-  horizon: 1 # horizon for each dataset sample. not used
-  val_ratio: 0.1 # the train-validation ratio
-  pad_after: 0 # padding after the episode
-  episode_cnt: 10000 # total episodes by default
-  step_cnt: 100000 # total data transitions
-  data_augmentation: False  # data augmentation
-  use_disk: False # use disk instead of memory to store the data
-  pad_before: 0 # padding before the episode
-  data_ratio: 1 # only use a fraction of data
-  action_horizon: 8 # observation: (observation + action) is action horizon
-  observation_horizon: 1 # before observation horizon is observation
-  dataset_postfix: "_traj${dataset.episode_cnt}" # postfix for the dataset
-  precompute_feat: True # precompute features using pretrained models for stems
-  image_encoder: 'resnet' # which encoder to use as the pretrained model
-  dataset_encoder_postfix: "_${dataset.image_encoder}" # another postfix
-  use_multiview: False # use multiple camera views
-  normalize_state: True # whether to normalize the states in datasets
-  regenerate: False # regenerate data
-  action_multiple_horizon: True  # multiply action dimensions by horizon
-  random_mask_obs: True # whether to randomize observation input length
-  data_augment_ratio: 1 # add data augmentation to the images
-  proprioception_expand: False # expand proprioception to use multiple tokens
-  proprioception_expand_dim: 32 # expand proprioception dimensions
+  _target_: hpt.dataset.local_traj_dataset.LocalTrajDataset  # 数据集类
+  horizon: 1  # 每个样本的 horizon（未使用）
+  val_ratio: 0.1  # 训练/验证集比例
+  pad_after: 0  # episode 后填充
+  episode_cnt: ${episode_num}  # 总 episode 数
+  step_cnt: 100000  # 总数据步数
+  data_augmentation: False  # 是否数据增强
+  use_disk: False  # 是否用磁盘存储数据
+  pad_before: 0  # episode 前填充
+  data_ratio: 1  # 只用部分数据
+  action_horizon: 8  # 动作 horizon
+  observation_horizon: 4  # 观测 horizon
+  dataset_postfix: "_traj${dataset.episode_cnt}"  # 数据集后缀
+  image_encoder: 'resnet'  # 图像编码器
+  dataset_encoder_postfix: "_${dataset.image_encoder}"  # 编码器后缀
+  dataset_name: Robotwin # 数据集名称
+  precompute_feat: True  # 是否预计算特征
+  use_multiview: True  # 是否多视角
+  normalize_state: True  # 是否归一化状态
+  regenerate: False  # 是否重新生成数据
+  action_multiple_horizon: True  # 动作维度乘以 horizon
+  random_mask_obs: True  # 随机观测长度
+  data_augment_ratio: 1  # 图像数据增强比例
+  proprioception_expand: False  # 是否扩展本体感知
+  proprioception_expand_dim: 32  # 本体感知扩展维度
+  env_rollout_fn:  # 数据集转换函数
+    _target_: policy.HPT.process_data.convert_dataset_robotwin_cached  # 数据集转换函数类
+    task_name: ${task_name}  # 任务名
+    task_config: ${task_config}  # 任务配置
+    episode_num: ${episode_num}  # episode 数
+    use_cache: True  # 是否使用缓存
+    save_dir: ${processed_data_dir}  # 保存路径
 
-# trunk transformer config
+# 主干 transformer 配置
 network:
-  _target_: hpt.models.policy.Policy
-  embed_dim: 128
-  num_blocks: 16 # num of blocks in the trunk transformer
-  num_heads: 8 # num of heads in the trunk transformer
-  drop_path: 0.1 # drop path in the trunk transformer
+  _target_: hpt.models.policy.Policy  # policy class
+  embed_dim: 768 # trunk transformer embedding dimension
+  num_blocks: 16  # number of blocks in the trunk transformer
+  num_heads: 8  # number of heads in the trunk transformer
+  drop_path: 0.1  # drop path in the trunk transformer
   use_modality_embedding: True # add trainable modality position tokens
   use_domain_embedding: False # whether to add domain-specific trainable parameters
   observation_horizon: ${dataset.horizon} # the observation history
@@ -69,9 +68,9 @@ network:
 # stem network for different modalities
 stem:
   modalities: ['image', 'state'] # 'language'
-  modality_embed_dim: ${network.embed_dim}
+  modality_embed_dim: ${network.embed_dim} # modality embedding dimension
   normalize_state: ${dataset.normalize_state} # normalize state vectors
-  state_embedding_dim: 1 # dimension of positional encoding for state
+  state_embedding_dim: 14 # dimension of positional encoding for state
   cross_attention: True # whether to use cross attention or not
   precompute_feat: True # whether to use precomputed features. if not, will finetune.
   image_encoder: ${dataset.image_encoder} # what image encoder to use
@@ -83,78 +82,77 @@ stem:
   masked_autoencoding: False # random mask encoding and then reconstruction
   random_horizon_masking: True # whether to randomize observation input length
   add_pos_embedding_to_state: False # positional embedding for the state
-
-  # standardize token sizes for each modality
-  crossattn_latent:
-    image: 16
-    state: 16
-    # language: 8
-
+  crossattn_latent: # standardize token sizes for each modality
+    image: 16 # image token size
+    state: 16 # state token size
+    language: 8
   image:
-    _target_: hpt.models.policy_stem.MLP
-    input_dim: 512
-    output_dim: ${network.embed_dim}
-    widths:  [128]
-    num_of_copy: 1
-
-  # each item is a token
+    _target_: hpt.models.policy_stem.MLP # image stem class
+    input_dim: 512 # input dimension
+    output_dim: ${network.embed_dim} # output dimension
+    widths:  [128] # MLP layer widths
+    num_of_copy: 1 # number of copies
   state:
-    _target_: hpt.models.policy_stem.MLP
-    input_dim: ${stem.state_embedding_dim} # ovewrite based on the dataset
-    output_dim: ${network.embed_dim}
-    widths: [128]
+    _target_: hpt.models.policy_stem.MLP # state stem class
+    input_dim: ${stem.state_embedding_dim} # input dimension (overwrite based on the dataset)
+    output_dim: ${network.embed_dim} # output dimension
+    widths: [128] # MLP layer widths
 
-# head network
+# head 网络配置
 head:
-    _target_: hpt.models.policy_head.MLP
-    input_dim: ${network.embed_dim}
-    tanh_end: True # normalized action output
-    output_dim: -1 # overwrite based on dataset
-    widths: [256, 128]
-    normalize_action: ${head.tanh_end}
-    dropout: True
+  _target_: hpt.models.policy_head.MLP  # head 类
+  input_dim: ${network.embed_dim}  # head 输入维度
+  tanh_end: True  # 是否归一化动作输出
+  output_dim: 112  # 动作输出维度（需根据实际动作维度设置）
+  widths: [256, 128]  # MLP 层宽度
+  normalize_action: ${head.tanh_end}  # 是否归一化动作
+  dropout: True  # 是否使用 dropout
 
-# self-explanatory torch config
+# 训练参数
 dataloader:
-  batch_size: 256
-  num_workers: 1
-  pin_memory: True
-  persistent_workers: True
-  shuffle: True
-  drop_last: False
+  batch_size: 256  # 训练 batch 大小
+  num_workers: 1  # dataloader worker 数
+  pin_memory: True  # 是否 pin memory
+  persistent_workers: True  # 是否持久化 worker
+  shuffle: True  # 是否打乱数据
+  drop_last: False  # 是否丢弃最后一个 batch
 
 val_dataloader:
-  batch_size: 256
-  num_workers: 1
-  shuffle: False
-  pin_memory: True
-  persistent_workers: True
-  drop_last: False
+  batch_size: 256  # validation batch size
+  num_workers: 1  # validation dataloader worker number
+  shuffle: False  # do not shuffle validation set
+  pin_memory: True  # whether to use pin memory
+  persistent_workers: True  # whether to persist workers
+  drop_last: False  # whether to drop last batch
 
+# optimizer config
 optimizer:
-  _target_: torch.optim.AdamW
-  lr: 1.0e-5 # 1e-4
-  eps: 1.0e-7
-  weight_decay: 1e-4
+  _target_: torch.optim.Adam  # optimizer type
+  lr: 1e-4  # learning rate
 
-optimizer_misc:
-  nontrunk_lr_scale: 1.
-
-warmup_lr:
-  lr: 1e-10
-  step: 1000 # first 1000 iterations
-
+# learning rate scheduler config
 lr_scheduler:
-  _target_: torch.optim.lr_scheduler.CosineAnnealingLR
-  T_max: ${train.total_epochs}
-  eta_min: 1e-6
+  _target_: torch.optim.lr_scheduler.CosineAnnealingLR  # scheduler type
+  T_max: ${train.total_epochs}  # maximum epoch
+  eta_min: 1e-6  # minimum learning rate
 
-# training config
+# 训练流程参数
 train:
-  total_epochs: 500  # maximum training epochs before termination. usually set as maximum
+  total_epochs: 1000  # maximum training epochs before termination. usually set as maximum
   total_iters: 20000 # maximum training steps before termination
-  epoch_iters: 1000  # training steps in each epoch
+  epoch_iters: 2000  # training steps in each epoch
   validation_iters: 100 # maximum iterations for validation
-  pretrained_dir: "" # pretrained model path for testing
+  pretrained_dir: "./hpt-xlarge" # pretrained model path for testing
   freeze_trunk: True # whether to freeze the trunk during finetuning
   wandb_pretrained_dir: "" # use models pretrained on wandb
+
+# optimizer misc config
+optimizer_misc:
+  nontrunk_lr_scale: 1. # non-trunk layer learning rate scale
+
+# warmup learning rate config
+warmup_lr:
+  lr: 1e-10 # warmup initial learning rate
+  step: 1000 # first 1000 iterations
+
+gpu_id: 6
